[package]
name = "codes"
version = "0.1.0"
authors = ["Teo <teodor@dahlknutsen.no>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"
rand_core = "0.5.1"
rayon = "1.4.0"
num-bigint = { version = "0.3", features = ["rand"] }
